--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
         "@reach/dialog": "^0.10.3",
         "@reach/portal": "^0.10.3",
         "@reduxjs/toolkit": "^1.3.5",
+        "quest-switchswap-core": "1.0.2",
+        "quest-switchswap-default-token-list": "1.0.2",
+        "quest-switchswap-sdk": "1.0.3",
+        "quest-switchswap-sushi-data": "1.0.2",
         "@tailwindcss/aspect-ratio": "^0.2.0",
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/line-clamp": "^0.2.0",
@@ -74,7 +78,7 @@
         "@web3-react/walletconnect-connector": "^6.1.9",
         "@web3-react/walletlink-connector": "^6.2.0",
         "ajv": "^6.12.3",
-        "autoprefixer": "^9.8.6",
+        "autoprefixer": "^9",
         "cids": "^1.0.0",
         "classnames": "^2.3.1",
         "clsx": "^1.1.1",
@@ -105,14 +109,10 @@
         "node-vibrant": "^3.1.5",
         "numeral": "^2.0.6",
         "polished": "^3.3.2",
-        "postcss": "^7.0.36",
+        "postcss": "^7",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^1.17.0",
         "qs": "^6.9.4",
-        "quest-switchswap-core": "1.0.2",
-        "quest-switchswap-default-token-list": "1.0.2",
-        "quest-switchswap-sdk": "1.0.3",
-        "quest-switchswap-sushi-data": "1.0.2",
         "react": "^17.0.2",
         "react-app-rewire-hot-loader": "^2.0.1",
         "react-app-rewire-postcss": "^3.0.2",
@@ -144,7 +144,7 @@
         "styled-components": "^4.2.0",
         "supports-color": "^9.0.1",
         "swr": "^0.5.5",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat",
         "tailwindcss-border-gradient-radius": "^2.0.0",
         "typescript": "^3.8.3",
         "use-count-up": "^2.2.5",
